--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	      left: 30vw;
 		   z-index: 2; 
 	      font-weight: bold;
-	      color: black;
+	      color: #3E6736A;
 	      font-size: 4.5vw;
 	      font-style: normal;
 	      font-family: 'Open Sans', sans-serif;
@@ -80,4 +80,5 @@
 	  </script>
 	</body>
 	</html>
+
 
