--- a/index.html
+++ b/index.html
@@ -1,84 +1,97 @@
 	<!DOCTYPE html>
-	<html lang="es">
-	<head>
-	  <meta charset="UTF-8">
-	  <title>Día del padre - iCo Medios</title>
-	  <meta http-equiv="refresh" content="180">
-	  <style>
-	    html, body {
-	      margin: 0;
-	      padding: 0;
-	      background-color: #ffffff;
-	      overflow: hidden;
-	    }
-	.contenedor {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-	    }
-	
-	    video#fondoVideo {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: 0;
-}
-	
-	    .mensaje {
-	      position: absolute;
-	      bottom: 60vh;
-	      left: 30vw;
-		   z-index: 2; 
-	      font-weight: bold;
-	      color: #3E6736A;
-	      font-size: 4.5vw;
-	      font-style: normal;
-	      font-family: 'Open Sans', sans-serif;
-	      opacity: 0;
-	      transition: opacity 0.5s ease-in;
-	    }
-	
-	    .mensaje.mostrar {
-	      opacity: 1;
-	    }
-	  </style>
-	</head>
-	<body>
-	  <div class="contenedor">
-	    <video autoplay loop muted playsinline id="fondoVideo">
-	      <source src="fondo.mp4" type="video/mp4">
-	      Tu navegador no soporta video.
-	    </video>
-	
-	    <div id="nombres">
-	      <div class="mensaje para"></div>
-	    </div>
-	  </div>
-	
-	  <script>
-	    const url = "https://script.google.com/macros/s/AKfycbxyPI4xpgj0ibff7t49Gy5MJKxZulYvRt5EEjgttmTOwPCEguZZidmSGlkUIPRtC0yC/exec";
-	
-	    fetch(url)
-	      .then(res => res.json())
-	      .then(aprobados => {
-	        const contenedorMensaje = document.querySelector(".para");
-	
-	        if (aprobados.length > 0) {
-	          const elegido = aprobados[Math.floor(Math.random() * aprobados.length)];
-	          contenedorMensaje.innerText = elegido.para.toUpperCase();
-	        } else {
-	          contenedorMensaje.innerText = "--";
-	        }
-	
-	        setTimeout(() => {
-	          contenedorMensaje.classList.add("mostrar");
-	        }, 1000); // Puedes bajar a 500 si lo quieres aún más rápido
-	      });
-	  </script>
-	</body>
-	</html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Día del padre - iCo Medios</title>
+  <meta http-equiv="refresh" content="180">
+
+  <!-- ✅ Importar la tipografía Fredoka -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap" rel="stylesheet">
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background-color: #ffffff;
+      overflow: hidden;
+    }
+
+    .contenedor {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+    }
+
+    video#fondoVideo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+    }
+
+    .mensaje {
+      position: absolute;
+      bottom: 60vh;
+      left: 30vw;
+      z-index: 2; 
+      font-weight: 700;
+      color: #3E6736;
+      font-size: 4.5vw;
+      font-style: normal;
+
+      /* ✅ Aplicar la fuente Fredoka */
+      font-family: "Fredoka", sans-serif;
+      font-optical-sizing: auto;
+      font-variation-settings: "wdth" 100;
+
+      opacity: 0;
+      transition: opacity 0.5s ease-in;
+    }
+
+    .mensaje.mostrar {
+      opacity: 1;
+    }
+  </style>
+</head>
+<body>
+  <div class="contenedor">
+    <video autoplay loop muted playsinline id="fondoVideo">
+      <source src="fondo.mp4" type="video/mp4">
+      Tu navegador no soporta video.
+    </video>
+
+    <div id="nombres">
+      <div class="mensaje para"></div>
+    </div>
+  </div>
+
+  <script>
+    const url = "https://script.google.com/macros/s/AKfycbxyPI4xpgj0ibff7t49Gy5MJKxZulYvRt5EEjgttmTOwPCEguZZidmSGlkUIPRtC0yC/exec";
+
+    fetch(url)
+      .then(res => res.json())
+      .then(aprobados => {
+        const contenedorMensaje = document.querySelector(".para");
+
+        if (aprobados.length > 0) {
+          const elegido = aprobados[Math.floor(Math.random() * aprobados.length)];
+          contenedorMensaje.innerText = elegido.para.toUpperCase();
+        } else {
+          contenedorMensaje.innerText = "--";
+        }
+
+        setTimeout(() => {
+          contenedorMensaje.classList.add("mostrar");
+        }, 1000); 
+      });
+  </script>
+</body>
+</html>
+
 
 
