--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     .mensaje {
       position: absolute;
-      bottom: 60vh;
+      bottom: 20vh;
       left: 30vw;
       z-index: 2; 
       font-weight: 700;
-      color: #3E6736;
+      color: #E6736A;
       font-size: 4.5vw;
       font-style: normal;
 
@@ -92,6 +92,7 @@
   </script>
 </body>
 </html>
+
 
 
 
